Internal Spring 10 - WIP: Upgrade to Spring Boot 4.0.7.
Update Weaver version to 2.4.0-SNAPSHOT.

Upgrade Jackson 2 to Jackson 3.

Resolve other minor deprecations.

TODO: Resolve necessary migration from Spring Security 6.5 to 7.
- This will likely require a complete rewrite of `auth`.